--- a/internationalt.css
+++ b/internationalt.css
@@ -1,42 +1,46 @@
-/* ------------------------------- internatinalt ----------------------------------*/
+/* ------------------------------- internatoinalt ----------------------------------*/
 
 .gridcon {
-  display: grid;
-  grid-template-columns: auto auto;
-  margin-left: 10vw;
-  margin-right: 10vw;
-  padding: 5vw;
+    display: grid;
+    grid-template-columns: auto auto;
+    margin-left: 10vw;
+    margin-right: 10vw;
+    padding: 5vw;
 }
 
 .griditem img {
-  width: 15vw;
-  padding: 1vw;
+    width: 50vw;
+    padding: 1vw;
 }
 
 .griditem p {
-  font-family: "Amiko", sans-serif;
-  padding: 1vw;
+    font-family: "Amiko", sans-serif;
+    padding: 1vw;
+}
+
+.griditem h2 {
+    padding: 1vw;
 }
 
 /* ------------------------------ internationalt media ---------------------------------------*/
 
 @media only screen and (max-width: 600px) {
-  #aktiv .gridcon {
-    display: grid;
-    grid-template-columns: 100vw;
-    grid-template-rows: auto auto;
+    #aktiv .gridcon {
+        display: grid;
+        grid-template-columns: 100vw;
+        grid-template-rows: auto auto;
 
-    margin-left: 0vw;
-    margin-right: 0vw;
-    padding: 0;
-  }
+        margin-left: 0vw;
+        margin-right: 0vw;
+        padding: 0;
+    }
 
-  #aktiv .griditem img {
-    width: 100vw;
-    padding: 0;
-  }
+    #aktiv .griditem img {
+        width: 100vw;
+        padding: 0;
+    }
 
-  #aktiv .griditem h2 {
-    text-align: center;
-  }
+    #aktiv .griditem h2 {
+        text-align: center;
+    }
 }
