--- a/style.css
+++ b/style.css
@@ -10,12 +10,13 @@ body {
   overflow-x: hidden;
 }
 
-button {
+.button {
   border: solid #5ba5a4 2px;
   color: #5ba5a4;
   padding: 0.5vw;
   border-radius: 4px;
   background-color: transparent;
+  text-decoration: none;
 }
 
 p {
@@ -277,11 +278,14 @@ li {
   position: relative;
   display: inline-block;
   padding-top: 2.6vw;
+  margin-left: 37vw;
 }
 
 #menu .dropdownc {
   background-color: #f9f9f9;
   z-index: 2;
+  width: 110vw;
+  margin-left: -40vw;
 }
 
 #menu img {
