--- a/forside.css
+++ b/forside.css
@@ -64,7 +64,7 @@
 #video {
     text-align: center;
     background-color: #f9f9f9;
-    margin: 5vw 0 0 0;
+    margin: 2vw 0 0 0;
 
 }
 
@@ -73,7 +73,7 @@
 }
 
 iframe {
-    margin: 1vw 10vw 0 10vw;
+    margin: 1vw 10vw 2vw 10vw;
     width: 55vw;
     height: 52.5vh;
 }
