--- a/kontakt.css
+++ b/kontakt.css
@@ -26,6 +26,10 @@
     font-size: 0.9em;
 }
 
+#kontakt .splash {
+    font-size: 2em;
+}
+
 #kontakt h1 {
     margin-left: 10vw;
     margin-right: 10vw;
