--- a/forside.css
+++ b/forside.css
@@ -17,8 +17,8 @@
 #forside .gridcon {
     display: flex;
     flex-wrap: nowrap;
-    margin-left: 5vw;
-    margin-right: 5vw;
+    margin-left: 7vw;
+    margin-right: 7vw;
     padding: 2vw;
 }
 
@@ -34,8 +34,8 @@
     display: flex;
     flex-wrap: nowrap;
     justify-content: center;
-    margin-left: 5vw;
-    margin-right: 5vw;
+    margin-left: 7vw;
+    margin-right: 7vw;
     border-radius: 20px;
     padding: 2vw;
 }
@@ -46,7 +46,7 @@
 }
 
 #forside .gridcon2 img {
-    width: 80%;
+    width: 50%;
     height: auto;
 }
 
@@ -64,6 +64,10 @@
 #video {
     text-align: center;
     background-color: #f9f9f9;
+    background-image: url(background/Untitled-1Artboard-1.png);
+    background-size: 100%;
+    background-position: bottom;
+    background-repeat: no-repeat;
     margin: 2vw 0 0 0;
 
 }
@@ -80,13 +84,34 @@ iframe {
 
 #kontakt_info {
     text-align: center;
-    background-color: #9ee89c;
-    padding: 5vw 0 0 0;
+    padding: 5vw 0 5vw 0;
     color: #f9f9f9;
 }
 
 .kontakt_button {
     padding: 3vw;
+}
+
+.kontakt_link {
+    background-color: #76d2d1;
+
+    margin: 10px 45vw 10px 45vw;
+    padding: 1vw;
+    border-radius: 10px;
+    text-align: center;
+    width: 10vw;
+}
+
+.kontakt_link a {
+    text-decoration: none;
+    color: #f9f9f9;
+    width: 10vw;
+    font-family: "Montserrat", sans-serif;
+}
+
+.kontakt_link:hover {
+    background-color: #b7e5e5;
+    transition: 0.05s linear;
 }
 
 /*---------------------- FORSIDE SLUT ------------------------------------*/
@@ -143,7 +168,8 @@ iframe {
     }
 
 
-    .gridcon2 p {
+    .gridcon2 p,
+    .gridcon2 h1 {
         margin: 3vw;
     }
 
@@ -154,5 +180,9 @@ iframe {
         padding: 0;
         width: 90vw;
         height: 20vh;
+    }
+
+    #video {
+        height: 400px;
     }
 }
