--- a/om.css
+++ b/om.css
@@ -10,16 +10,24 @@
     margin-left: 5vw;
     margin-right: 5vw;
 
+
 }
 
 #om_os #icons img {
-    width: 15vw;
+    width: 12vw;
     padding: 1vw;
 
 }
 
 #om_os .splash {
     margin-left: 0;
+}
+
+#icons {
+    background-image: url(background/Leaves.png);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: top;
 }
 
 #icons .griditem {
@@ -44,10 +52,12 @@
 
 #om_os_b {
     width: 100vw;
-    background-size: cover;
     margin-left: 0;
     position: relative;
-    margin-top: 2vw;
+    background-image: url(background/Leaves.png);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: top;
 
 }
 
@@ -65,28 +75,55 @@
     color: #76d2d1;
 }
 
+#icons p,
+#icons h2 {
+    color: #282828;
+}
+
 /* -------------------------- om os media ----------------------------*/
 
 @media only screen and (max-width: 600px) {
+
+    #om_os .griditem {
+        width: 100%;
+        margin: 0;
+        margin-top: -1vw;
+        padding: 5vw;
+        border-radius: 0;
+    }
     #om_os .gridcon {
-        display: grid;
-        grid-template-columns: 100vw;
-        grid-template-rows: auto auto auto;
-        margin-left: 0;
-        margin-right: 0;
-        padding-bottom: 5vw;
+        display: block;
+        width: 93%;
+        margin: 0;
+
+    }
+
+    #om_os_b {
+        background-image: none;
+        width: 100vw;
         padding: 0;
+        margin: 0;
+
+    }
+
+    #om_os_b p {
+        text-align: left;
     }
 
     #om_os #icons img {
         width: 25vw;
         padding: 5vw;
-        margin-left: 37vw;
     }
 
-    #om_os .griditem p {
+    #om_os #icons p {
         text-align: center;
-        padding: 1vw;
+    }
+
+
+    #om_os .griditem p {
+        width: 93%;
+
+
     }
 
     #om_os .griditem h1 {
@@ -97,11 +134,5 @@
         text-align: center;
     }
 
-    #om_os .griditem button {
-        margin-left: 37vw;
-    }
-    .section {
-        margin-left: 0;
-        margin-right: 0;
-    }
+
 }
