--- a/internationalt.css
+++ b/internationalt.css
@@ -1,13 +1,25 @@
 /* ------------------------------- internatoinalt ----------------------------------*/
 
+#int_baggrund {
+    background-image: url(background/Leaves_kontaktArtboard-1.png);
+    background-size: 100%;
+    background-position: bottom;
+    background-repeat: no-repeat;
+    padding-bottom: 5vw;
+}
+
 #int .gridcon {
     display: flex;
     flex-wrap: wrap;
-    margin-left: 5vw;
-    margin-right: 5vw;
-    padding: 5vw;
+    padding: 2vw;
     justify-content: center;
     align-items: center;
+    background-color: #76d2d1;
+    color: #f9f9f9;
+    margin: 2vw 7vw 0 7vw;
+    border-radius: 20px;
+
+
 }
 
 #int .griditem img {
